--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -60,9 +60,9 @@ input[type="text"], input[type="search"], input[type="email"] { padding: 9px; bo
 #comments .comment { margin-bottom: 30px; }
 #comments .comment:last-child { margin-bottom: 0; }
 #comments .comment .children { margin-left: 65px; border-left: 1px solid #EAEAEA; padding-left: 10px; margin-top: 30px; }
-#comments .comment .comment-meta, #comments .comment p, #comments .comment .reply { margin-left: 65px; } 
+#comments .comment .comment-meta, #comments .comment p, #comments .comment .reply { margin-left: 65px; }
 #comments .comment cite { margin-left: 15px; }
-#comments .comment .comment-meta { background: #F8F8F8; padding: 2px 10px; display: inline-block; font-size: .8em; margin: 5px 15px 10px; } 
+#comments .comment .comment-meta { background: #F8F8F8; padding: 2px 10px; display: inline-block; font-size: .8em; margin: 5px 15px 10px; }
 #comments .comment .avatar { float: left; -webkit-border-radius: 50%; -moz-border-radius: 50%; border-radius: 50%; }
 #comments .comment-reply-link { text-transform: uppercase; text-decoration: none; padding: 5px 15px; display: inline-block; margin-top: 5px; border-radius: 2px; font-size: .8em; }
 #comments #cancel-comment-reply-link { font-size: .7em; float: right; }
@@ -84,7 +84,8 @@ footer #social-icons li a:hover { -webkit-transition: all .2s ease-in-out; -moz-
 /* Scroll to top */
 #scroll-top a { padding: 4px 10px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; background: #818c90; position: fixed; bottom: 48px; right: 32px; display: none; opacity: 0.89; filter: alpha(opacity=89); z-index: 999; text-align: center; }
 #scroll-top a i { font-size: 30px; color: #fff; }
-#scroll-top a:hover { cursor: pointer; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; transition: all .2s ease-in-out;  }
+#scroll-top a:hover { background-color: #FFF13C !important; cursor: pointer; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; transition: all .2s ease-in-out;  }
+#scroll-top a:hover i { color: #3F59A2; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; transition: all .2s ease-in-out; }
 
 /* Pagination */
 .pagination { height: 36px; margin: 30px 0 50px; text-align: left; }
