--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,15 +6,16 @@ body {
   color: #4B4B4B;
   line-height: 1.7em;
 }
-h1, h2, h3, h4, a { color: #3f98b5; }
+h1, h2, h3, h4 { color: #4B4B4B; }
+a { color: #003399; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
-#top-header #primary-nav ul li a:hover { background-color: #EAEAEA; }
+#top-header { border-bottom: 2px solid #003399; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #003399; color: #FFF; }
+#top-header #primary-nav ul li a:hover { background-color: rgba(0, 51, 153, 0.4); }
 #about-subscribe { background-color: #EAEAEA; }
 #about-subscribe h2 { color: #6B6B6B; }
 #headline { background: #3f98b5; }
@@ -36,27 +37,27 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #003399;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: rgba(0, 51, 153, 0.6);
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer { background-color: #003399; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #4B4B4B; }
+footer #top-footer #social-icons li a:hover { color: #cc3300; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #f5454a;
+  background-color: #003399;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #CC3C40;
+  background-color: rgba(0, 51, 153, 0.6);
 }
