--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -85,7 +85,7 @@ footer #social-icons li a { -webkit-transition: all .2s ease-in-out; -moz-transi
 #scroll-top a { padding: 4px 10px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; background: #818c90; position: fixed; bottom: 48px; right: 32px; display: none; opacity: 0.89; filter: alpha(opacity=89); z-index: 999; text-align: center; }
 #scroll-top a i { font-size: 30px; color: #fff; }
 #scroll-top a, #scroll-top a i { cursor: pointer; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; transition: all .2s ease-in-out; }
-#scroll-top a:hover { background-color: #cc3300 !important; cursor: pointer; }
+#scroll-top a:hover { background-color: #fb237f !important; cursor: pointer; }
 #scroll-top a:hover i { color: #fff; }
 
 /* Pagination */
