--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -153,7 +153,12 @@ input[type="submit"]:hover,
 .loop-posts .blog-post img{
   max-width: 530px;
 }
-.blog-post .social {
+.single-post .blog-post > img {
+  max-width: 450px;
+  float: left;
+  margin: 0 20px 20px 0;
+}
+.single-post .blog-post .social {
   border-right: 1px solid #EAEAEA;
   border-left: 0;
   top: 308px;
