--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -18,7 +18,7 @@ h3 { font-size: 1.35em; }
 #top-header #primary-nav ul li a:hover { background-color: #3181ae; }
 #about-subscribe { background-color: #EAEAEA; }
 #about-subscribe h2 { color: #6B6B6B; }
-#headline .container { padding: 40px 0 10px; }
+#headline .container { padding: 40px 15px 10px; }
 #headline h3 { font-family: 'Open Sans', sans-serif; font-size: 1.7em; }
 
 /* Post */
