--- a/style.css
+++ b/style.css
@@ -8,5 +8,6 @@ Version: 2.0
 @import url("assets/css/reset.css");
 @import url("assets/css/grid.css");
 @import url("assets/css/base.css");
+@import url("assets/css/core-wp.css");
 @import url("assets/css/custom.css");
 @import url("assets/css/responsive.css");
