--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,23 +7,23 @@ body {
   line-height: 1.7em;
 }
 h1, h2, h3, h4 { color: #4B4B4B; }
-a { color: #fb237f; }
+a { color: #C21502; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
 #top-header { border-bottom: 2px solid #000; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #fb237f; color: #FFF; }
-#top-header #primary-nav ul li a:hover { background-color: #000; }
-#about-subscribe { background-color: #000; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #C21502; color: #FFF; }
+#top-header #primary-nav ul li a:hover { background-color: #919191; }
+#about-subscribe { background-color: #555; }
 #about-subscribe h2 { color: #fff; }
 #headline { background: #3f98b5; }
 #headline h3 { color: #FFF; font-size: 1.5em; }
 
 /* Post */
 .blog-post .post-meta { color: #AAA; }
-.blog-post h3 a { color: #fb237f; }
+.blog-post h3 a { color: #C21502; }
 .post-date {
   background: #eaeaea;
   background: -moz-linear-gradient(-45deg,  #eaeaea 0%, #eaeaea 50%, #dddddd 51%, #dddddd 100%); /* FF3.6+ */
@@ -37,27 +37,27 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #fb237f;
+  color: #C21502;
 }
 .read-more:hover {
-  background-color: #000;
-  color: #fb237f;
+  background-color: #C21502;
+  color: #fff;
 }
 
 /* Footer */
-footer #top-footer { background-color: #000; color: #FFF; }
+footer #top-footer { background-color: #555; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #fb237f; }
+footer #top-footer #social-icons li a:hover { color: #C21502; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #fb237f;
+  background-color: #C21502;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #000;
+  background-color: #919191;
 }
