--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,9 +13,9 @@ h3 { font-size: 1.35em; }
 
 /* Header */
 #top-header #primary-nav ul li a { color: #FFF; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #35739F; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #3D5464; }
 #top-header #primary-nav ul li.current_page_item a:hover { color: #FFF; }
-#top-header #primary-nav ul li a:hover { background-color: #3181ae; }
+#top-header #primary-nav ul li a:hover { background-color: #3D5464; }
 #about-subscribe { background-color: #EAEAEA; }
 #about-subscribe h2 { color: #6B6B6B; }
 #headline .container { padding: 40px 15px 10px; }
@@ -77,7 +77,7 @@ input[type="submit"]:hover,
   cursor: pointer;
   text-transform: uppercase;
 }
-#top-header { background-color: #27282C; }
+#top-header { background-color: #506E84; }
 #top-header .container { padding: 30px 15px; }
 #top-header h1 {
   font-family: 'Open Sans', sans-serif;
@@ -87,13 +87,13 @@ input[type="submit"]:hover,
   position: inherit;
 }
 #top-header h1 a {
-  color: #FFF;
+  color: #D3DBE0;
   text-decoration: none;
   -webkit-transition: all ease-in-out .2s;
   -moz-transition: all ease-in-out .2s;
   transition: all ease-in-out .2s;
 }
-#top-header h1 a:hover { color: #3181AE; }
+#top-header h1 a:hover { color: #FFF; }
 #top-header #primary-nav ul li a {
   font-size: .9em;
   padding: 20px;
