--- a/assets/css/core-wp.css
+++ b/assets/css/core-wp.css
@@ -12,3 +12,23 @@ a img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 .wp-caption.alignright { margin: 5px 0 20px 20px; }
 .wp-caption img { border: 0 none; height: auto; margin: 0; max-width: 98.5%; padding: 0; width: auto; }
 .wp-caption p.wp-caption-text { font-size: 11px; line-height: 17px; margin: 0; padding: 0 4px 5px; }
+em, i { font-style: italic; }
+ol li { list-style-type: decimal; list-style-position: inside; }
+blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+blockquote p {
+  display: inline;
+}
