--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -41,6 +41,7 @@ input[type="text"], input[type="search"], input[type="email"] { padding: 9px; bo
 .blog-post h3 a { text-decoration: none; }
 .blog-post h3 a:hover { text-decoration: underline; }
 .blog-post .wp-post-image { margin-bottom: 15px; }
+.blog-post > p:last-of-type { clear: both; }
 .read-more { clear: both; display: block; text-align: center; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px; text-decoration: none; text-transform: uppercase; font-weight: bold; font-size: .8em; line-height: 1em; margin-top: 20px; padding: 15px; }
 .read-more:hover { -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; transition: all .2s ease-in-out; }
 .read-more i { font-size: .8em; margin-left: 3px; vertical-align: bottom; }
@@ -60,9 +61,9 @@ input[type="text"], input[type="search"], input[type="email"] { padding: 9px; bo
 #comments .comment { margin-bottom: 30px; }
 #comments .comment:last-child { margin-bottom: 0; }
 #comments .comment .children { margin-left: 65px; border-left: 1px solid #EAEAEA; padding-left: 10px; margin-top: 30px; }
-#comments .comment .comment-meta, #comments .comment p, #comments .comment .reply { margin-left: 65px; } 
+#comments .comment .comment-meta, #comments .comment p, #comments .comment .reply { margin-left: 65px; }
 #comments .comment cite { margin-left: 15px; }
-#comments .comment .comment-meta { background: #F8F8F8; padding: 2px 10px; display: inline-block; font-size: .8em; margin: 5px 15px 10px; } 
+#comments .comment .comment-meta { background: #F8F8F8; padding: 2px 10px; display: inline-block; font-size: .8em; margin: 5px 15px 10px; }
 #comments .comment .avatar { float: left; -webkit-border-radius: 50%; -moz-border-radius: 50%; border-radius: 50%; }
 #comments .comment-reply-link { text-transform: uppercase; text-decoration: none; padding: 5px 15px; display: inline-block; margin-top: 5px; border-radius: 2px; font-size: .8em; }
 #comments #cancel-comment-reply-link { font-size: .7em; float: right; }
