--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,25 +6,23 @@ body {
   color: #4B4B4B;
   line-height: 1.7em;
 }
-h1, h2, h3, h4 { color: #4B4B4B; }
-a { color: #3f98b5; }
+h1, h2, h3, h4 { color: #6B6B6B; }
+a { color: #4853ad; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; background-color: #fff; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
-#top-header #primary-nav ul li a { color: #3f98b5; }
-#top-header #primary-nav ul li a:hover { background-color: #ddd; }
-#about-subscribe { background-color: #EAEAEA; }
-#about-subscribe h2 { color: #6B6B6B; }
-#headline { background: #3f98b5; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #4853ad; color: #FFF; }
+#top-header #primary-nav ul li a:hover { background-color: #EAEAEA; }
+#about-subscribe { background-color: #5fc8aa; }
+#about-subscribe h2 { color: #FFFFFF; }
+#headline { background: #5fc8aa; }
 #headline h3 { color: #FFF; font-size: 1.5em; }
 
 /* Post */
 .blog-post .post-meta { color: #AAA; }
-.blog-post h3 a { color: #517E93; }
+.blog-post h3, .blog-post h3 a { color: #4B4B4B; }
 .post-date {
   background: #eaeaea;
   background: -moz-linear-gradient(-45deg,  #eaeaea 0%, #eaeaea 50%, #dddddd 51%, #dddddd 100%); /* FF3.6+ */
@@ -38,33 +36,31 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #4853ad;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #4853ad;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer { background-color: #289976; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #1f5964; }
+footer #top-footer #social-icons li a:hover { color: #1f7452; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #3f98b5;
+  background-color: #393395;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #177c90;
+  background-color: #2b2975;
 }
 
-/* Scroll to top */
-#scroll-top a { background: #177c90; }
-#scroll-top a:hover { background-color: #20819a; }
-#scroll-top a i { color: #FFF; }
-#scroll-top a:hover i { color: #FFF; }
+/* Custom */
+#top-header .container { padding: 20px 0; }
+#primary-nav { padding: 20px 0px; }
