--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,24 +7,24 @@ body {
   line-height: 1.7em;
 }
 h1, h2, h3, h4 { color: #4B4B4B; }
-a { color: #3f98b5; }
+a { color: #603dac; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; background-color: #fff; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
-#top-header #primary-nav ul li a { color: #3f98b5; }
+#top-header { background-color: #fff; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #603dac; color: #FFF; }
+#top-header #primary-nav ul li a { color: #603dac; }
 #top-header #primary-nav ul li a:hover { background-color: #ddd; }
-#about-subscribe { background-color: #EAEAEA; }
+#about-subscribe { background-color: #6b6b6b; }
 #about-subscribe h2 { color: #6B6B6B; }
-#headline { background: #3f98b5; }
+#headline { background: #555555; }
 #headline h3 { color: #FFF; font-size: 1.5em; }
 
 /* Post */
 .blog-post .post-meta { color: #AAA; }
-.blog-post h3 a { color: #517E93; }
+.blog-post h3 a { color: #564587; }
 .post-date {
   background: #eaeaea;
   background: -moz-linear-gradient(-45deg,  #eaeaea 0%, #eaeaea 50%, #dddddd 51%, #dddddd 100%); /* FF3.6+ */
@@ -38,33 +38,53 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #603dac;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #603dac;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer { background-color: #555; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #1f5964; }
+footer #top-footer #social-icons li a:hover { color: #CCC; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #3f98b5;
+  background-color: #603dac;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #177c90;
+  background-color: #43278d;
 }
 
 /* Scroll to top */
-#scroll-top a { background: #177c90; }
-#scroll-top a:hover { background-color: #20819a; }
+#scroll-top a { background: #603dac; }
+#scroll-top a:hover { background-color: #43278d; }
 #scroll-top a i { color: #FFF; }
 #scroll-top a:hover i { color: #FFF; }
+
+/* Custom */
+#about-subscribe {
+  background-image: url("../images/background.jpg");
+  background-size: cover;
+  padding: 68px 0;
+  background-repeat: no-repeat;
+}
+#about-subscribe h2 {
+  color: #ECECEC;
+  text-align: left;
+  font-size: 28px;
+  font-weight: bold;
+  width: 270px;
+  line-height: 40px;
+}
+@media (max-width: 600px) {
+  #about-subscribe { background-image: none !important; padding: 20px 0; }
+  #about-subscribe h2 { width: 100%; margin-bottom: 0 !important; }
+}
