--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,7 +6,7 @@ body {
   color: #4B4B4B;
   line-height: 1.7em;
 }
-h1, h2, h3, h4, a { color: #3f98b5; }
+h1, h2, h3, h4, a { color: #434142; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
@@ -14,9 +14,9 @@ h3 { font-size: 1.35em; }
 /* Header */
 #top-header { border-bottom: 2px solid #d5833b; }
 #top-header #primary-nav ul li.current_page_item a { background-color: #434142; color: #FFF; }
-#top-header #primary-nav ul li a:hover { background-color: #d5833b; }
+#top-header #primary-nav ul li a:hover { background-color: #d5833b; color: #FFF; }
 #about-subscribe { background-color: #434142; }
-#about-subscribe h2 { color: #6B6B6B; }
+#about-subscribe h2 { color: #ffffff; }
 #headline { background: #434142; }
 #headline h3 { color: #FFF; font-size: 1.5em; }
 
@@ -46,7 +46,7 @@ h3 { font-size: 1.35em; }
 /* Footer */
 footer #top-footer { background-color: #434142; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #4B4B4B; }
+footer #top-footer #social-icons li a:hover { color: #d5833b; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
 
 /* Buttons */
