--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,24 +7,26 @@ body {
   line-height: 1.7em;
 }
 h1, h2, h3, h4 { color: #4B4B4B; }
-a { color: #3f98b5; }
+a { color: #00A3EA; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; background-color: #fff; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
-#top-header #primary-nav ul li a { color: #3f98b5; }
+#top-header { background-color: #fff; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #3a82b6; color: #FFF; }
+#top-header #primary-nav ul li a { color: #3a82b6; border: 1px solid #3a82b6; }
 #top-header #primary-nav ul li a:hover { background-color: #ddd; }
 #about-subscribe { background-color: #EAEAEA; }
-#about-subscribe h2 { color: #6B6B6B; }
+#about-subscribe .container { padding: 20px 0 10px; }
+#about-subscribe h2 { color: #4B4B4B; font-size: 1.25em; line-height: 70px; }
 #headline { background: #3f98b5; }
 #headline h3 { color: #FFF; font-size: 1.5em; }
 
 /* Post */
 .blog-post .post-meta { color: #AAA; }
-.blog-post h3 a { color: #517E93; }
+.blog-post h3 { font-weight: 200; }
+.blog-post h3 a { color: #00A3EA; }
 .post-date {
   background: #eaeaea;
   background: -moz-linear-gradient(-45deg,  #eaeaea 0%, #eaeaea 50%, #dddddd 51%, #dddddd 100%); /* FF3.6+ */
@@ -38,33 +40,33 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #3a82b6;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #3a82b6;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer { background-color: #767676; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #1f5964; }
+footer #top-footer #social-icons li a:hover { color: #00A3EA; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #3f98b5;
+  background-color: #3a82b6;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #177c90;
+  background-color: #295b80;
 }
 
 /* Scroll to top */
-#scroll-top a { background: #177c90; }
-#scroll-top a:hover { background-color: #20819a; }
+#scroll-top a { background: #3a82b6; }
+#scroll-top a:hover { background-color: #295b80; }
 #scroll-top a i { color: #FFF; }
 #scroll-top a:hover i { color: #FFF; }
