--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,19 +7,19 @@ body {
   line-height: 1.7em;
 }
 h1, h2, h3, h4 { color: #4B4B4B; }
-a { color: #3f98b5; }
+a { color: #164582; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; background-color: #fff; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
-#top-header #primary-nav ul li a { color: #3f98b5; }
+#top-header { border-bottom: 2px solid #164582; background-color: #fff; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #164582; color: #FFF; }
+#top-header #primary-nav ul li a { color: #164582; }
 #top-header #primary-nav ul li a:hover { background-color: #ddd; }
-#about-subscribe { background-color: #EAEAEA; }
-#about-subscribe h2 { color: #6B6B6B; }
-#headline { background: #3f98b5; }
+#about-subscribe { background-color: #164582; }
+#about-subscribe h2 { color: #FFF; }
+#headline { background: #164582; }
 #headline h3 { color: #FFF; font-size: 1.5em; }
 
 /* Post */
@@ -38,15 +38,15 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #164582;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #164582;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer { background-color: #164582; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
 footer #top-footer #social-icons li a:hover { color: #1f5964; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
@@ -55,7 +55,7 @@ footer #bottom-footer { background-color: #27282C; color: #FFF; }
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #3f98b5;
+  background-color: #164582;
   color: #FFF;
 }
 input[type="submit"]:hover,
